clean up react hook reference pages (#354)
Co-authored-by: Jeff Escalante <jescalan@users.noreply.github.com>

--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -1,15 +1,11 @@
 ---
 title: useSession()
-description: The `useSession` hook provides access to the the current user Session object, and helpers to set the active session.
+description: The useSession() hook provides access to the the current user Session object, and helpers to set the active session.
 ---
-
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useSession()`
 
-The `useSession` hook provides access to the current user's `Session` object, as well as helpers for setting the active session.
+The `useSession()` hook provides access to the current user's [`Session`](/docs/references/javascript/session) object, as well as helpers for setting the active session.
 
 ## Usage
 
@@ -67,7 +63,7 @@ export default function Home() {
 
 | Values | Description |
 | --- | --- |
-| `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
+| `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
 | `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
 | `setSession()` | A function that sets the active session. |
 | `session` | Holds the current active session for the user. |
