--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -1,21 +1,17 @@
 ---
 title: useSignIn()
-description: The `useSignIn` hook provides access to the SignIn object, which allows you to check the current state of a sign in and sign in users with custom flows.
+description: The useSignIn() hook provides access to the SignIn object, which allows you to check the current state of a sign-in and for creating custom sign-in flows.
 ---
-
-import { Tab, Tabs } from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
 
 # `useSignIn()`
 
-The `useSignIn` hook provides access to the `SignIn` object, which allows you to check the current state of a sign in. This is also useful for creating a custom sign in flow.
+The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javascript/sign-in/sign-in) object, which allows you to check the current state of a sign-in. This is also useful for creating a custom sign-in flow.
 
 ## Usage
 
 <Tabs items={['Next.js', 'React']}>
   <Tab>
-    #### Check the current sign in status
+    #### Check the current sign-in status
 
     ```tsx filename="pages/index.tsx"
     import { useSignIn } from "@clerk/nextjs";
@@ -94,7 +90,7 @@ The `useSignIn` hook provides access to the `SignIn` object, which allows you to
   </Tab>
 
   <Tab>
-    #### Check the current sign in status
+    #### Check the current sign-in status
 
     ```tsx filename="pages/sign-in-step.tsx"
     import { useSignIn } from "@clerk/clerk-react";
@@ -175,7 +171,7 @@ The `useSignIn` hook provides access to the `SignIn` object, which allows you to
 
 | Values | Description |
 | --- | --- |
-| `isLoaded` | A boolean that is set to false until Clerk loads and initializes. |
+| `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
 | `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
 | `setSession()` | A function that sets the active session. |
-| `signIn` | An object that contains the current sign in attempt status and methods to create a new sign in attempt. |
+| `signIn` | An object that contains the current sign-in attempt status and methods to create a new sign-in attempt. |
