clean up syntax

--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -19,8 +19,8 @@ Retrieve the members of the currently active organization.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `initialPage?` | number | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
-| `pageSize?` | number | A number that indicates the maximum number of results that should be returned for a specific page. |
+| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
 | `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response |
 
 <Callout type="info">
@@ -30,21 +30,9 @@ Retrieve the members of the currently active organization.
 
 ### Returns
 
-<Tables
-    headings={["Type", "Description"]}
-    headingsMeta={[{}, {maxWidth: "300px"}]}
-    rows={[
-        {
-            cells: [
-                <code>Promise{"<"}<a
-                    href="/docs/references/javascript/types/paginated-response">PaginatedResponse</a>{"<"}<a
-                    href="/docs/references/javascript/organization-domain">OrganizationMembership</a>{">"}</code>,
-                <>This method returns a <code>Promise</code> which resolves with a list of <code><a
-                    href="/docs/references/javascript/organization-domain">OrganizationMembership</a></code> objects.</>,
-            ]
-        },
-    ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[PaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | This method returns a `Promise` which resolves with a [`PaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
 
 ## `addMember()`
 
@@ -67,7 +55,7 @@ Please note that only administrators can add members to an organization.
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a <code>Promise</code> which resolves with the <code>[OrganizationMembership][org-mem-ref]</code> objects. |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the[`OrganizationMembership`][org-mem-ref] objects. |
 
 ## `updateMember()`
 
@@ -75,7 +63,7 @@ Please note that only administrators can add members to an organization.
 function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembership>;
 ```
 
-Updates a member based on the *userId*. For now only role can be changed.
+Updates a member based on the `userId`. For now only role can be changed.
 
 ### `UpdateMembershipParams`
 
@@ -88,7 +76,7 @@ Updates a member based on the *userId*. For now only role can be changed.
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a <code>Promise</code> which resolves with the updated <code>[OrganizationMembership][org-mem-ref]</code> objects. |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the updated [`OrganizationMembership`][org-mem-ref] objects. |
 
 ## `removeMember()`
 
@@ -96,7 +84,7 @@ Updates a member based on the *userId*. For now only role can be changed.
 function removeMember(userId: string): Promise<OrganizationMembership>;
 ```
 
-Removes a member from the organization based on the userId.
+Removes a member from the organization based on the `userId`.
 
 ### Props
 
@@ -108,6 +96,7 @@ Removes a member from the organization based on the userId.
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a <code>Promise</code> which resolves with the removed <code>[OrganizationMembership][org-mem-ref]</code> objects. |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a `Promise` which resolves with the removed [`OrganizationMembership`][org-mem-ref] objects. |
 
+[pag-ref]: /docs/references/javascript/types/paginated-response
 [org-mem-ref]: /docs/references/javascript/organization-membership
