fix spacing on cards

--- a/docs/authentication/social-connections/overview.mdx
+++ b/docs/authentication/social-connections/overview.mdx
@@ -3,14 +3,12 @@ title: Social Connections
 description: Browse the wide range of application providers that Clerk provides to ease your user's sign-up and sign-in processes.
 ---
 
-import { AuthProvidersCards } from '@/components/AuthProvidersCards';
-
 # Authentication Providers
 
 Clerk provides a wide range of application providers to ease your user's sign-up and sign-in processes.
 
 <div className="container mx-auto my-4">
-  <div className="grid justify-center gap-x-7 grid-cols-1 lg:grid-cols-2">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
     <AuthProvidersCards
       title="Facebook"
       description="Add Facebook as an authentication provider for your Clerk app."
