lead examples with app router related hooks/helpers/examples etc

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -42,13 +42,13 @@ CLERK_SECRET_KEY={{secret}}
 
 ### Mount `<ClerkProvider />`
 
-Add the [`<ClerkProvider />`](/docs/components/clerk-provider) wrapper to your application. The `<ClerkProvider />` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. A reasonable default approach is to have `<ClerkProvider />` wrap the `<body/>` to enable the context to be accessible anywhere within the app.
+Add the [`<ClerkProvider />`][clerk-provider] wrapper to your application. The [`<ClerkProvider />`][clerk-provider] component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. A reasonable default approach is to have [`<ClerkProvider />`][clerk-provider] wrap the `<body/>` to enable the context to be accessible anywhere within the app.
 
 
 <Callout type="info">
-  The `<ClerkProvider />` component needs to access [headers](https://nextjs.org/docs/app/api-reference/functions/headers) to authenticate correctly. This means anything wrapped by the provider will be opted into [dynamic rendering](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-rendering) at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are <em>not</em> wrapped by `<ClerkProvider />`.
+  The [`<ClerkProvider />`][clerk-provider] component needs to access [headers](https://nextjs.org/docs/app/api-reference/functions/headers) to authenticate correctly. This means anything wrapped by the provider will be opted into [dynamic rendering](https://nextjs.org/docs/app/building-your-application/rendering/server-components#dynamic-rendering) at request time. If you have static-optimized or ISR pages that you would prefer not to be opted into dynamic rendering, make sure they are <em>not</em> wrapped by [`<ClerkProvider />`][clerk-provider].
   
-  This is easiest to accomplish by ensuring that `<ClerkProvider />` is added further down the tree to wrap route groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if your project includes a set of landing/marketing pages as well as a dashboard that requires login, you would create separate `(marketing)` and `(dashboard)` route groups. Adding `<ClerkProvider />` to the `(dashboard)/layout.jsx` layout file will ensure that only those routes are opted into dynamic rendering, allowing the marketing routes to be statically optimized.
+  This is easiest to accomplish by ensuring that [`<ClerkProvider />`][clerk-provider] is added further down the tree to wrap route groups that explicitly need authentication instead of having the provider wrap your application root as recommended above. For example, if your project includes a set of landing/marketing pages as well as a dashboard that requires login, you would create separate `(marketing)` and `(dashboard)` route groups. Adding [`<ClerkProvider />`][clerk-provider] to the `(dashboard)/layout.jsx` layout file will ensure that only those routes are opted into dynamic rendering, allowing the marketing routes to be statically optimized.
 
 </Callout>
 
@@ -90,7 +90,7 @@ export default MyApp;
 </CodeBlockTabs>
 
 <Callout type="warning">
-  The root layout is a server component. If you plan to use the `<ClerkProvider />` outside the root layout, it will need to be a server component as well.
+  The root layout is a server component. If you plan to use the [`<ClerkProvider />`][clerk-provider] outside the root layout, it will need to be a server component as well.
 </Callout>
 
 ### Protect your application
@@ -116,14 +116,14 @@ With this middleware, your entire application is protected. If you try to access
 
 
 <Callout type="info" emoji="🎉">
- At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box.
+ At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of the box.
  Start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
 </Callout>
 
 
 ### Build your own sign in and sign up pages
 
-In addition to the Account Portal, Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />` and `<SignUp />` components by utilizing the Next.js optional catch-all route.
+In addition to the [Account Portal](/docs/account-portal/overview), Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components by utilizing the Next.js optional catch-all route.
 
 #### Build your sign up page
 
@@ -279,7 +279,28 @@ export default function Example() {
 
 #### API Routes
 
-You can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
+<Tabs items={["App Router", "Pages Router"]}>
+<Tab>
+For Next.js applications using the App Router, you can protect your API routes by using the [`auth`](/docs/references/nextjs/auth) helper. 
+
+```tsx filename="app/page.[jsx/tsx]"
+import { NextResponse } from 'next/server';
+import { auth } from '@clerk/nextjs';
+ 
+export async function Page() {
+  const { userId } : { userId: string | null } = auth();
+  
+  if(!userId){
+    return new Response("Unauthorized", { status: 401 });
+  }
+
+  return NextResponse.json({});
+}
+```
+</Tab>
+
+<Tab>
+For Next.js apps using the Pages Router, you can protect your API routes by using the [`getAuth`](/docs/references/nextjs/get-auth) helper and retrieve data from your own systems.
 
 ```tsx filename="pages/api/auth.ts"
 import type { NextApiRequest, NextApiResponse } from "next";
@@ -287,18 +308,23 @@ import { getAuth } from "@clerk/nextjs/server";
 
 export default function handler(req: NextApiRequest, res: NextApiResponse) {
   const { userId } = getAuth(req);
+
   if (!userId) {
     res.status(401).json({ error: "Unauthorized" });
     return;
   }
+
   // retrieve data from your database
+
   res.status(200).json({});
 }
 ```
+</Tab>
+</Tabs>
 
-In some cases, you may need the full [`User`](/docs/references/javascript/user/user) object. For example, if you want to access the user's email address or name. You can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full `User` object.
+In some cases, you may need the full [`User`][user-object] object. For example, if you want to access the user's email address address or name. You can use the [`clerkClient`](/docs/references/backend/overview) helper to get the full [`User`][user-object] object.
 
-
+<CodeBlockTabs options={["App Router", "Pages Router"]}>
 ```tsx filename="pages/api/auth.ts"
 import { clerkClient } from "@clerk/nextjs";
 import { getAuth } from "@clerk/nextjs/server";
@@ -322,13 +348,37 @@ export default async function handler(
 }
 ```
 
+```tsx filename="pages/api/auth.ts"
+import { clerkClient } from "@clerk/nextjs";
+import { getAuth } from "@clerk/nextjs/server";
+import type { NextApiRequest, NextApiResponse } from "next";
+
+export default async function handler(
+  req: NextApiRequest,
+  res: NextApiResponse
+) {
+  const { userId } = getAuth(req);
+
+  if (!userId) {
+    return res.status(401).json({ error: "Unauthorized" });
+  }
+
+  const user = userId ? await clerkClient.users.getUser(userId) : null;
+
+  // use the user object to decide what data to return
+
+  return res.status(200).json({});
+}
+```
+</CodeBlockTabs>
+
 ### Server side render user data
 
 <Tabs items={["App Router", "Pages Router"]}>
   <Tab>
     #### **`currentUser()`**
 
-    [`currentUser()`](/docs/references/nextjs/current-user) loads the `User` object for the authenticated user from Clerk's backend API. This is helpful if you want to render information, like their first and last name, directly from the server.
+    [`currentUser()`](/docs/references/nextjs/current-user) loads the [`User`][user-object] object for the authenticated user from Clerk's backend API. This is helpful if you want to render information, like their first and last name, directly from the server.
 
     Under the hood, this calls `fetch()` so it is automatically deduped per request.
 
@@ -362,7 +412,7 @@ export default async function handler(
     You can access the active session and user data in your `getServerSideProps` using the [`getAuth`](/docs/references/nextjs/get-auth) helper.
 
     <Callout type="info" emoji="ℹ️">
-      Please note the addition of buildClerkProps in the return statement, which informs our React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
+      Please note the addition of `buildClerkProps` in the return statement, which informs our React helpers of the authentication state during server-side rendering (like `useAuth()`, `<SignedIn>`, and `<SignedOut>`).
     </Callout>
 
     ```tsx filename="pages/example.tsx"
@@ -377,11 +427,12 @@ export default async function handler(
       }
 
       // Load any data your application needs for the page using the userId
+
       return { props: { ...buildClerkProps(ctx.req) } };
     };
     ```
 
-    You can also access the full user object before passing it to the page using the `clerkClient` helper.
+    You can also access the full [`User`][user-object] object before passing it to the page using the `clerkClient` helper.
 
     ```tsx filename="pages/example.tsx"
     import { clerkClient } from "@clerk/nextjs";
@@ -414,3 +465,6 @@ Now that your Next.js application is integrated with Clerk, you will want to rea
     <Cards title="Next.js SDK Reference" description="Learn more about additional Next.js methods." link="/docs/references/nextjs/overview" cta="Learn More" />
   </div>
 </div>
+
+[clerk-provider]: /docs/components/clerk-provider
+[user-object]: /docs/references/javascript/user/user
