apply suggestions from code review

--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -79,7 +79,7 @@ ReactDOM.render(
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `publishableKey` | `string \| undefined` | The publishable key from your Clerk Dashboard, used to connect to Clerk |
+| `publishableKey` | `string \| undefined` | The publishable key from your Clerk Dashboard, used to connect to Clerk. |
 | `frontendApi` | `string` | The frontend API host for your instance. This can be found in your Clerk Dashboard. |
 | `navigate` | `(to: string) => Promise<unknown> \| void` | A function which takes the destination path as an argument and performs a "push" navigation. |
 | `clerkJSVariant` | `string` | If your web application uses only Control components, you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance. |
