--- a/docs/components/customization/layout.mdx
+++ b/docs/components/customization/layout.mdx
@@ -29,11 +29,11 @@ import { ClerkProvider } from '@clerk/nextjs';
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `helpPageUrl` | `string` | The URL to your help page |
-| `logoImageUrl` | `string` | The URL to your logo image |
+| `helpPageUrl` | `string` | The URL to your help page. |
+| `logoImageUrl` | `string` | The URL to your logo image. |
 | `logoPlacement` | `'inside' \| 'outside'` | The placement of your logo.  |
-| `privacyPageUrl` | `string` | The URL to your privacy page |
+| `privacyPageUrl` | `string` | The URL to your privacy page. |
 | `showOptionalFields` | `boolean` | Whether to show optional fields on sign up. |
 | `socialButtonsPlacement` | `'bottom' \| 'top'` | The placement of your social buttons. |
 | `socialButtonsVariant` | `'blockButton' \| 'textButton' \| 'auto'` | The variant of your social buttons. |
-| `termsPageUrl` | `string` | The URL to your terms page |
+| `termsPageUrl` | `string` | The URL to your terms page. |
