--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -160,8 +160,8 @@ In some cases you will want to use your own button, or button text. You can do t
     {
       cells: [
         <code>mode</code>,
-        <code>"redirect" | "modal"</code>,
-        <><code>redirect</code> is the default behaviour and will redirect to sign-in route. <code>modal</code> will open a modal one current route.</>
+        <code>'redirect' | 'modal'</code>,
+        <>Determines what happens when a user clicks on the <code><SignInButton /></code>. Setting this to <code>'redirect'</code> will redirect the user to the sign-in route. Setting this to <code>'modal'</code> will open a modal on the current route.<br />Defaults to <code>'redirect'</code>.</>
       ]
     }
   ]}
