--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -169,7 +169,7 @@ In some cases you will want to use your own button, or button text. You can do t
       cells: [
         <code>mode</code>,
         <code>'redirect' | 'modal'</code>,
-        <>Determines what happens when a user clicks on the <code><SignUpButton /></code>. Setting this to <code>'redirect'</code> will redirect the user to the sign-in route. Setting this to <code>'modal'</code> will open a modal on the current route.<br />Defaults to <code>'redirect'</code>.</>
+        <>Determines what happens when a user clicks on the <code>{'<SignUpButton />'}</code>. Setting this to <code>'redirect'</code> will redirect the user to the sign-in route. Setting this to <code>'modal'</code> will open a modal on the current route.<br />Defaults to <code>'redirect'</code>.</>
       ]
     }
   ]}
