clean up /javascript pages

--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -45,7 +45,7 @@ Below is an example of an `.env` file. If you are signed into your Clerk Dashboa
 
 <InjectKeys>
 
-```sh filename=".env"
+```env filename=".env"
 CLERK_PUBLISHABLE_KEY={{pub_key}}
 CLERK_SECRET_KEY={{secret}}
 ```
@@ -63,7 +63,6 @@ This examples uses `dontenv` to load the environment variables. You can use any 
   ```bash filename="terminal"
   yarn add @clerk/fastify
   yarn add -D types/dotenv
-  ```
   ```
 
   ```bash filename="terminal"
