--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -3,10 +3,6 @@ title: Organization Invitations
 description: These are all methods on the Organization class that allow you to manage the invitations to an organization.
 ---
 
-import { Tables } from "@/components/Table";
-import { Images } from "@/components/Images";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Organization Invitations
 
 These are all methods on [the Organization class](/docs/references/javascript/organization/organization) that allow you to manage the invitations to an organization.
@@ -17,39 +13,20 @@ These are all methods on [the Organization class](/docs/references/javascript/or
 function getPendingInvitations(params?: GetPendingInvitationsParams): Promise<OrganizationInvitation[]>;
 ```
 
-Retrieve the members of the selected organization.
+Retrieves a list of organization invitations that have not yet been accepted.
 
 ### `GetPendingInvitationsParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>limit</code>,
-  <code>number | undefined</code>,
-  "Limit of the results returned.",
-  ]},
-  {cells: [
-  <code>offset</code>,
-  <code>number | undefined</code>,
-  "The offset of results to start the retrieval.",
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `limit` | `number` | Limit of the results returned. |
+| `offset` | `number` | The offset of results to start the retrieval. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-invitation">OrganizationInvitation</a>[]{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with a list of <code><a href="/docs/references/javascript/organization-invitation">OrganizationInvitation</a></code> objects.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[OrganizationInvitation][orginv-ref][]\></code> | This method returns a `Promise` which resolves with a list of [`OrganizationInvitation`][orginv-ref] objects. |
 
 ## `inviteMember()`
 
@@ -57,39 +34,20 @@ Retrieve the members of the selected organization.
 function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitation>;
 ```
 
-Creates and sends an invitation to the target email address for becoming a member with the role passed on the  function parameters.
+Creates and sends an invitation to the target email address for becoming a member with the role passed on the function parameters.
 
 ### `InviteMemberParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>emailAddress</code>,
-  <code>string</code>,
-  "The email address to invite.",
-  ]},
-  {cells: [
-  <code>role</code>,
-  <code>'admin' | 'basic_member' | 'guest_member'</code>,
-  "The role of the new member.",
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `emailAddress` | `string` | The email address to invite. |
+| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the new member. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-invitation">OrganizationInvitation</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to the <code><a href="/docs/references/javascript/organization-invitation">OrganizationInvitation</a></code> for the created invitation.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[OrganizationInvitation][orginv-ref]\></code> | This method returns a `Promise` which resolves to the [`OrganizationInvitation`][orginv-ref] for the created invitation. |
 
 ## `inviteMembers()`
 
@@ -101,32 +59,15 @@ Creates and sends an invitation to the target email addresses for becoming a mem
 
 ### `InviteMembersParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>emailAddresses</code>,
-  <code>string[]</code>,
-  "The email addresses to invite.",
-  ]},
-  {cells: [
-  <code>role</code>,
-  <code>'admin' | 'basic_member' | 'guest_member'</code>,
-  "The role of the new members.",
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `emailAddresses` | `string[]` | The email addresses to invite. |
+| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the new members. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-invitation">OrganizationInvitation</a>[]{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves to a list of <code><a href="/docs/references/javascript/organization-invitation">OrganizationInvitation</a></code>s for the created invitations.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[OrganizationInvitation][orginv-ref][]\></code> | This method returns a `Promise` which resolves to a list of [`OrganizationInvitation`][orginv-ref]s for the created invitations. |
+
+[orginv-ref]: /docs/references/javascript/organization-invitation
