--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -24,7 +24,7 @@ Retrieve the members of the currently active organization.
 | `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response |
 
 <Callout type="info">
-    `GetMembershipsParams` was recently updated. The `limit` and `offset` parameters are now deprecated.
+  `GetMembershipsParams` was recently updated. The `limit` and `offset` parameters are now deprecated.
 </Callout>
 
 
@@ -63,7 +63,7 @@ Please note that only administrators can add members to an organization.
 function updateMember(params: UpdateMembershipParams): Promise<OrganizationMembership>;
 ```
 
-Updates a member based on the `userId`. For now only role can be changed.
+Updates a member based on the `userId`. Currently, only a user's role can be updated.
 
 ### `UpdateMembershipParams`
 
