--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -3,8 +3,6 @@ title: ClerkJS
 description: ClerkJS is our foundational JavaScript library for building user management and authentication. It enables you to register, sign in, verify and manage users for your application using highly customizable flows.
 ---
 
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # ClerkJS
 
 ClerkJS is our foundational JavaScript library for building user management and authentication. It enables you to register, sign in, verify and manage users for your application using highly customizable flows.
@@ -33,14 +31,14 @@ There are two ways you can include ClerkJS in your project. You can either [impo
   ```
 </CodeBlockTabs>
 
-Once you have installed the package, you will need to import the ClerkJS object constructor into your code and pass it your [Frontend API](https://dashboard.clerk.com/last-active?path=api-keys) as a parameter.
+Once you have installed the package, you will need to import the ClerkJS object constructor into your code and pass it your Clerk Publishable Key as a parameter.
 
 <InjectKeys>
 
 ```js
 import Clerk from '@clerk/clerk-js';
 
-const clerkFrontendApi = `pk_{{pub_key}}`;
+const clerkFrontendApi = {{pub_key}};
 const clerk = new Clerk(clerkFrontendApi);
 await clerk.load({
   // Set load options here...
@@ -51,14 +49,16 @@ await clerk.load({
 
 ### Install ClerkJS as script
 
-ClerkJS can be loaded from a `<script />` tag with the source from your [Frontend API](https://dashboard.clerk.com/last-active?path=api-keys) URL.
+ClerkJS can be loaded from a `<script />` tag with the source from your **Frontend API URL**. You can find your **Frontend API URL** on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page in the Clerk Dashboard. Click on the **Advanced** dropdown to reveal the **Frontend API URL**.
 
 Add the following script to your site's `<body>` element:
+
+<InjectKeys>
 
 ```html
 <script>
   // Get this URL and Publishable Key from the Clerk Dashboard
-  const clerkFrontendApi = 'pk_[publishable_key]';
+  const clerkFrontendApi = {{pub_key}};
   const frontendApi = '[your-domain].clerk.accounts.dev';
   const version = '@latest'; // Set to appropriate version
 
@@ -78,6 +78,8 @@ Add the following script to your site's `<body>` element:
   document.body.appendChild(script);
 </script>
 ```
+
+</InjectKeys>
 
 ## Usage
 
