--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -11,7 +11,7 @@ description: These are the methods that help you create data for the user, such 
 function createEmailAddress: (params: CreateEmailAddressParams) => Promise<EmailAddress>;
 ```
 
-Adds an email address for the user. A new [`EmailAddress`](/docs/references/javascript/email-address/email-address) will be created and associated with the user.
+Adds an email address for the user. A new [`EmailAddress`][email-ref] will be created and associated with the user.
 
 ### `CreateEmailAddressParams`
 
@@ -21,13 +21,9 @@ Adds an email address for the user. A new [`EmailAddress`](/docs/references/java
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="/docs/references/javascript/email-address/email-address">EmailAddress</a>{">"}</code>, <>The email address created for the user.</>]}
- ]}
-  />
-
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[EmailAddress][email-ref]\></code> | The email address created for the user. |
 
 ## `createPhoneNumber()`
 
@@ -35,7 +31,7 @@ Adds an email address for the user. A new [`EmailAddress`](/docs/references/java
 function createPhoneNumber: (params: CreatePhoneNumberParams) => Promise<PhoneNumber>;
 ```
 
-Adds a phone number for the user. A new <a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a> will be created and associated with the user.
+Adds a phone number for the user. A new [`PhoneNumber`][phone-ref] will be created and associated with the user.
 
 ### `CreatePhoneNumberParams`
 
@@ -45,12 +41,9 @@ Adds a phone number for the user. A new <a href="/docs/references/javascript/pho
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="/docs/references/javascript/phone-number/phone-number">PhoneNumber</a>{">"}</code>, <>The phone number created for the user.</>]}
- ]}
-  />
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[PhoneNumber][phone-ref]\></code> | The phone number created for the user. |
 
 ## `createWeb3Wallet()`
 
@@ -58,7 +51,7 @@ Adds a phone number for the user. A new <a href="/docs/references/javascript/pho
 function createWeb3Wallet: (params: CreateWeb3WalletParams) => Promise<Web3Wallet>;
 ```
 
-Adds a web3 wallet for the user. A new <a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a> will be created and associated with the user.
+Adds a web3 wallet for the user. A new [`Web3Wallet<`][web3-ref] will be created and associated with the user.
 
 ### `CreateWeb3WalletParams`
 
@@ -68,12 +61,9 @@ Adds a web3 wallet for the user. A new <a href="/docs/references/javascript/web3
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="/docs/references/javascript/web3-wallet/web3-wallet">Web3Wallet</a>{">"}</code>, <>The web3 wallet created for the user.</>]}
- ]}
-  />
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[Web3Wallet][web3-ref]\></code> | The web3 wallet created for the user. |
 
 ## `createExternalAccount()`
 
@@ -81,7 +71,7 @@ Adds a web3 wallet for the user. A new <a href="/docs/references/javascript/web3
 function createExternalAccount: (params: CreateExternalAccountParams) => Promise<ExternalAccount>;
 ```
 
-Adds an external account for the user. A new <a href="/docs/references/javascript/external-account">ExternalAccount</a> will be created and associated with the user.
+Adds an external account for the user. A new [`ExternalAccount`][exacc-ref] will be created and associated with the user.
 
 ### `CreateExternalAccountParams`
 
@@ -93,13 +83,9 @@ Adds an external account for the user. A new <a href="/docs/references/javascrip
 
 ### Returns
 
-
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="/docs/references/javascript/external-account">ExternalAccount</a>{">"}</code>, <>The external account created for the user.</>]}
- ]}
-  />
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[ExternalAccount][exacc-ref]\></code> | The external account created for the user. |
 
 The initial `state` of the returned `ExternalAccount` will be `unverified`. To initiate the connection with the external provider one should redirect to the `externalAccount.verification.externalVerificationRedirectURL` contained in the result of `createExternalAccount`.
 
@@ -107,3 +93,8 @@ Upon return, one can inspect within the `user.externalAccounts` the entry that c
 
 - If the connection was successful then `externalAccount.verification.status` should be `verified`
 - If the connection was not successful, then the `externalAccount.verification.status` will not be `verified` and the `externalAccount.verification.error` will contain the error encountered so that you can present corresponding feedback to the user
+
+[email-ref]: /docs/references/javascript/email-address/email-address
+[phone-ref]: /docs/references/javascript/phone-number/phone-number
+[web3-ref]: /docs/references/javascript/web3-wallet/web3-wallet
+[exacc-ref]: /docs/references/javascript/external-account
