--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -42,13 +42,9 @@ Verifies a TOTP secret after a user has created it. The user must provide a code
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="#totp-resource">TOTPResource</a>{">"}</code>, <>The newly verified TOTP object.</>]}
- ]}
-  />
-
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[TOTPResource](#totp-resource)\></code> | The newly verified TOTP object. |
 
 ### `disableTOTP()`
 
@@ -60,12 +56,9 @@ Disables TOTP by deleting the user's TOTP secret.
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="/docs/references/javascript/types/deleted-object">DeletedObject</a>{">"}</code>, <>The a reference to the deleted TOTP object.</>]}
- ]}
-  />
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[DeletedObject](/docs/references/javascript/types/deleted-object)\></code> | The reference to the deleted TOTP object. |
 
 ### `createBackupCode()`
 
@@ -78,12 +71,9 @@ Generates a fresh new set of backup codes for the user. Note that if this method
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="#backup-code-resource">BackupCodeResource</a>{">"}</code>, <>The newly created backup code.</>]}
- ]}
-  />
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[BackupCodeResource](#backup-code-resource)\></code> | The newly created backup code. |
 
 ## Types
 
