--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -101,13 +101,9 @@ Add the user's profile image or replace it if one already exists. This method wi
 
 #### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="#imageresource">ImageResource</a>{">"}</code>, <>The uploaded image.</>]}
- ]}
-  />
-
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[ImageResource](#image-resource)\></code> | The uploaded image. |
 
 ##### `ImageResource`
 
@@ -128,14 +124,9 @@ Retrieves all **active** sessions for this user. This method uses a cache so a n
 
 #### Returns
 
-
-<Tables
-  headings={["Type", "Description"]}
-  rows={[
-{cells: [<code>Promise{"<"}<a href="/docs/references/javascript/session-with-activities">SessionWithActivities</a>[]{">"}</code>, <>The list of active user sessions.</>]}
- ]}
-  />
-
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)\></code> | The list of active user sessions. |
 
 ### `isPrimaryIdentification()`
 
